<resources>
    <string name="app_name">ScrollingBehaviorAndroid</string>
    <string name="content">The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again. The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again. The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again. The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.The flexible space shrinks until only the toolbar remains. The title shrinks to 20sp in the navigation bar. When scrolling to the top of the page, the flexible space and the title grow into place again.</string>
    <string name="appbar_with_flexi_overlapping_content">AppBar with Flexi - Overlapping content</string>
    <string name="app_bar_with_flexi_space_and_overlapping_content">App bar with Flexi Space and Overlapping content</string>
    <string name="appbar_with_flexi_image_parallax_scrolling">AppBar with Flexi Image - Parallax Scrolling</string>
    <string name="app_bar_with_flexible_image">App bar with Flexible Image</string>
    <string name="appbar_with_flexi_space_scrolling">AppBar with Flexi Space - Scrolling</string>
    <string name="app_bar_with_flexible_space">App bar with Flexible Space</string>
    <string name="appbar_with_tabs_tab_and_toolbar_stays">AppBar with tabs - Tab and Toolbar stays</string>
    <string name="appbar_with_tabs_tabs_stays">AppBar with tabs - Tabs stays</string>
    <string name="appbar_with_tabs_scrolling_fully">AppBar with Tabs - Scrolling fully</string>
    <string name="app_bar_with_tabs">App bar with Tabs</string>
    <string name="stdappbar_with_toolbar_stays">StdAppBar with Toolbar Stays</string>
    <string name="stdappbar_with_toolbar_scrolls">StdAppBar with Toolbar Scrolls</string>
    <string name="standard_app_bar_with_tollbar_only">Standard App bar with Tollbar only</string>
</resources>
