<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_app_bar_with_tollbar_only" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchStdAppBarScrollsActivity"
                android:text="@string/stdappbar_with_toolbar_scrolls" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchStdAppBarStaysActivity"
                android:text="@string/stdappbar_with_toolbar_stays" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_bar_with_tabs" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAppBarTabsScrollsActivity"
                android:text="@string/appbar_with_tabs_scrolling_fully" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAppBarTabStaysActivity"
                android:text="@string/appbar_with_tabs_tabs_stays" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAppBarTabHidesActivity"
                android:text="@string/appbar_with_tabs_tab_and_toolbar_stays" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_bar_with_flexible_space" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAppBarFlexiSpaceScrollsActivity"
                android:text="@string/appbar_with_flexi_space_scrolling" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_bar_with_flexible_image" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAppBarFlexiImageScrollsActivity"
                android:text="@string/appbar_with_flexi_image_parallax_scrolling" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_bar_with_flexi_space_and_overlapping_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchAppBarFlexiOverlappingActivity"
                android:text="@string/appbar_with_flexi_overlapping_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
